Updated responsive design and fixed layout issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@ body{
   background-color: 	#36454F;
   width: 100%;
   height: 100%;
+  
 
 }
 
@@ -29,7 +30,7 @@ body{
   display: block;
   background-color: #36454F;
   width: 100%;
-  min-height: 100vh;  /* Ensures that the background color takes up the full viewport height */
+  min-height: 80vh;  /* Ensures that the background color takes up the full viewport height */
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23CF9FFF' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
@@ -41,8 +42,9 @@ body{
 
 
 @media (max-width: 576px) {
-
- 
+  body{
+    overflow-x: hidden;
+  }
   .navbar {
     flex-direction: column;
     align-items: flex-start;
